Backend/OneTimePasswordTactic.jj
PARSER_BEGIN(OneTimePasswordParser)

import java.util.*;

public class OneTimePasswordParser {
    private static ArrayList<String[]> events = new ArrayList<String[]>(); 
    private static int tacticCount = 0;

    public static void main(String[] args) {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();

            System.out.println("\n===============================================================================================");
            System.out.println("                        TACTIC DETECTION SYSTEM INITIALIZED");
            System.out.println("===============================================================================================\n");
            
            OneTimePasswordParser parser = new OneTimePasswordParser(new java.io.StringReader(traceInput));
            
            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceClient: Client --METHOD--> TraceAuthenticator: Authenticator ");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceClient: Client ");   
            System.out.println(" TraceClient: Client --METHOD--> TraceClient: Client ");
            System.out.println("  OR TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceClient: Client --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");

            parser.Trace();

            detectOneTimePassword();

            System.out.println("\n===============================================================================================");
            System.out.println("                              ANALYSIS SUMMARY             ");
            System.out.println(" Total One Time Password Tactic occurrences detected: " + tacticCount);
            System.out.println("===============================================================================================\n");
            
        
        } catch (Exception e) {
            System.out.println("{\"error\": \"Parsing failed: " + e.getMessage() + "\"}");
        }
    }


    private static void detectOneTimePassword() {
      
         System.out.println("\n===============================================================================================");
        System.out.println("                                 TACTIC DETECTION                                         ");
       System.out.println("\n===============================================================================================");
        
        int i = 0;
        while (i <= events.size() - 7) {
            String[] first = events.get(i);
            String[] second = events.get(i + 1);
            String[] third = events.get(i + 2);
            String[] fourth = events.get(i + 3);
            String[] fifth = events.get(i + 4);
            String[] sixth = events.get(i + 5);
            String[] seventh = events.get(i + 6);

            // Identification dynamique des rôles (Client et Authenticator)
            String client = first[0]; // CALLER du premier événement
            String authenticator = first[2]; // CALLEE du premier événement

            boolean condition = (!first[0].equals(authenticator));

            boolean format1 =
                second[0].equals(authenticator) && second[2].equals(authenticator) && // Authenticator → Authenticator (génère valeur sécurisée)
                third[0].equals(authenticator) && third[2].equals(client) &&         // Authenticator → Client (envoi valeur sécurisée)
                fourth[0].equals(client) && fourth[2].equals(client) &&              // Client → Client (génère mot de passe)
                fifth[0].equals(authenticator) && fifth[2].equals(authenticator) &&  // Authenticator → Authenticator (génère un autre mot de passe sécurisé)
                sixth[0].equals(client) && sixth[2].equals(authenticator) &&         // Client → Authenticator (envoi du mot de passe)
                seventh[0].equals(authenticator) && seventh[2].equals(authenticator); // Authenticator → Authenticator (vérification du mot de passe)

            boolean format2 =
                second[0].equals(authenticator) && second[2].equals(authenticator) && // Authenticator → Authenticator (génère valeur sécurisée)
                third[0].equals(authenticator) && third[2].equals(client) &&         // Authenticator → Client (envoi valeur sécurisée)
                fourth[0].equals(authenticator) && fourth[2].equals(authenticator) && // Authenticator → Authenticator (génère mot de passe)
                fifth[0].equals(client) && fifth[2].equals(client) &&               // Client → Client (génère mot de passe)
                sixth[0].equals(client) && sixth[2].equals(authenticator) &&         // Client → Authenticator (envoi du mot de passe)
                seventh[0].equals(authenticator) && seventh[2].equals(authenticator); // Authenticator → Authenticator (vérification du mot de passe)

            if (format1 && condition) {
                tacticCount++;
                
                  System.out.println("\n===============================================================================================");
                 System.out.println("                              Tactic detected at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                System.out.println( i+ " | " + first[0] + ":Client -- " + first[1] + ":requestAuthen --> " + first[2] + ":Authenticator");
                System.out.println( (i+1)+ " | " + second[0] + ":Authenticator -- " + second[1] + ":genSecureValue --> " + second[2] + ":Authenticator");
                System.out.println( (i+2)+ " | " + third[0] + ":Authenticator -- " + third[1] + ":sendSecureValue --> " + third[2] + ":Client");
                System.out.println( (i+3)+ " | " +  fourth[0] + ":Authenticator -- " + fourth[1] + ":genCPasswd --> "  + fourth[2] + ":Authenticator");
                System.out.println( (i+4)+ " | " + fifth[0] + ":Client -- " + fifth[1] + ":sendPassword --> " + fifth[2] + ":Authenticator");
                System.out.println( (i+5)+ " | " + sixth[0] + ":Authenticator -- " + sixth[1] + ":checkVerify --> " + sixth[2] + ":Authenticator");
                 System.out.println("\n===============================================================================================");
               
                
                
                i += 7; // Passer directement au bloc suivant
            } else {
              if (format2 && condition) {
                tacticCount++;
                
              
                 System.out.println("\n===============================================================================================");
                 System.out.println("                              Tactic detected at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                System.out.println( i+ " | " + first[0] + ":Client -- " + first[1] + ":requestAuthen --> " + first[2] + ":Authenticator");
                System.out.println( (i+1)+ " | " + second[0] + ":Authenticator -- " + second[1] + ":genSecureValue --> " + second[2] + ":Authenticator");
                System.out.println( (i+2)+ " | " + third[0] + ":Authenticator -- " + third[1] + ":sendSecureValue --> " + third[2] + ":Client");
                System.out.println( (i+3)+ " | " +fourth[0] + ":Client -- " + fourth[1] + ":genPasswd --> " + fourth[2] + ":Client");
                System.out.println( (i+4)+ " | " + fifth[0] + ":Client -- " + fifth[1] + ":sendPassword --> " + fifth[2] + ":Authenticator");
                System.out.println( (i+5)+ " | " + sixth[0] + ":Authenticator -- " + sixth[1] + ":checkVerify --> " + sixth[2] + ":Authenticator");
                 System.out.println("\n===============================================================================================");
                
          
 System.out.println((i+1) + " | " + second[0] + ":ReferenceMonitor -- " + second[1] + " --> " + second[2] + ":ReferenceMonitor");
               
               i += 7; // Passer directement au bloc suivant
               } else { 
                System.out.println("\nX ERROR! Unexpected CALLER Or CALLEE at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                i++; // Vérifier la structure en avançant ligne par ligne
            }
          }
        }
    }
}


PARSER_END(OneTimePasswordParser)

// Ignorer les espaces, tabulations et retours à la ligne
SKIP : { " " | "\t" | "\r" | "\n" }

// Définition des tokens
TOKEN : { <CALLER : "CALLER:"> }
TOKEN : { <METHOD : "METHOD:"> }
TOKEN : { <CALLEE : "CALLEE:"> }
TOKEN : { <COMMA : ","> }
TOKEN : { <SEMICOLON : ";"> }
TOKEN : { <IDENTIFIER : (["a"-"z", "A"-"Z", "0"-"9", "_"])+ > }

// Définition de la grammaire
void Trace() :
{
    System.out.println("\n Analyzing trace...");
}
{
    ( Event() )*
}

void Event() :
{ Token caller; Token method; Token callee; }
{
    <CALLER> caller = <IDENTIFIER> <COMMA>
    <METHOD> method = <IDENTIFIER> <COMMA>
    <CALLEE> callee = <IDENTIFIER> <SEMICOLON>
    {
        events.add(new String[]{caller.image, method.image, callee.image}); 
    }
}
