Backend/OneTimePasswordParser.java
/* Generated By:JavaCC: Do not edit this line. OneTimePasswordParser.java */
import java.util.*;

public class OneTimePasswordParser implements OneTimePasswordParserConstants {
    private static ArrayList<String[]> events = new ArrayList<String[]>();
    private static int tacticCount = 0;

    public static void main(String[] args) {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();

            System.out.println("\n===============================================================================================");
            System.out.println("                        TACTIC DETECTION SYSTEM INITIALIZED");
            System.out.println("===============================================================================================\n");

            OneTimePasswordParser parser = new OneTimePasswordParser(new java.io.StringReader(traceInput));

            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceClient: Client --METHOD--> TraceAuthenticator: Authenticator ");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceClient: Client ");
            System.out.println(" TraceClient: Client --METHOD--> TraceClient: Client ");
            System.out.println("  OR TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceClient: Client --METHOD--> TraceAuthenticator: Authenticator");
            System.out.println(" TraceAuthenticator: Authenticator --METHOD--> TraceAuthenticator: Authenticator");

            parser.Trace();

            detectOneTimePassword();

            System.out.println("\n===============================================================================================");
            System.out.println("                              ANALYSIS SUMMARY             ");
            System.out.println(" Total One Time Password Tactic occurrences detected: " + tacticCount);
            System.out.println("===============================================================================================\n");


        } catch (Exception e) {
            System.out.println("{\"error\": \"Parsing failed: " + e.getMessage() + "\"}");
        }
    }


    private static void detectOneTimePassword() {

         System.out.println("\n===============================================================================================");
        System.out.println("                                 TACTIC DETECTION                                         ");
       System.out.println("\n===============================================================================================");

        int i = 0;
        while (i <= events.size() - 7) {
            String[] first = events.get(i);
            String[] second = events.get(i + 1);
            String[] third = events.get(i + 2);
            String[] fourth = events.get(i + 3);
            String[] fifth = events.get(i + 4);
            String[] sixth = events.get(i + 5);
            String[] seventh = events.get(i + 6);

            // Identification dynamique des rôles (Client et Authenticator)
            String client = first[0]; // CALLER du premier événement
            String authenticator = first[2]; // CALLEE du premier événement

            boolean condition = (!first[0].equals(authenticator));

            boolean format1 =
                second[0].equals(authenticator) && second[2].equals(authenticator) && // Authenticator → Authenticator (génère valeur sécurisée)
                third[0].equals(authenticator) && third[2].equals(client) &&         // Authenticator → Client (envoi valeur sécurisée)
                fourth[0].equals(client) && fourth[2].equals(client) &&              // Client → Client (génère mot de passe)
                fifth[0].equals(authenticator) && fifth[2].equals(authenticator) &&  // Authenticator → Authenticator (génère un autre mot de passe sécurisé)
                sixth[0].equals(client) && sixth[2].equals(authenticator) &&         // Client → Authenticator (envoi du mot de passe)
                seventh[0].equals(authenticator) && seventh[2].equals(authenticator); // Authenticator → Authenticator (vérification du mot de passe)

            boolean format2 =
                second[0].equals(authenticator) && second[2].equals(authenticator) && // Authenticator → Authenticator (génère valeur sécurisée)
                third[0].equals(authenticator) && third[2].equals(client) &&         // Authenticator → Client (envoi valeur sécurisée)
                fourth[0].equals(authenticator) && fourth[2].equals(authenticator) && // Authenticator → Authenticator (génère mot de passe)
                fifth[0].equals(client) && fifth[2].equals(client) &&               // Client → Client (génère mot de passe)
                sixth[0].equals(client) && sixth[2].equals(authenticator) &&         // Client → Authenticator (envoi du mot de passe)
                seventh[0].equals(authenticator) && seventh[2].equals(authenticator); // Authenticator → Authenticator (vérification du mot de passe)

            if (format1 && condition) {
                tacticCount++;

                  System.out.println("\n===============================================================================================");
                 System.out.println("                              Tactic detected at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                System.out.println( i+ " | " + first[0] + ":Client -- " + first[1] + ":requestAuthen --> " + first[2] + ":Authenticator");
                System.out.println( (i+1)+ " | " + second[0] + ":Authenticator -- " + second[1] + ":genSecureValue --> " + second[2] + ":Authenticator");
                System.out.println( (i+2)+ " | " + third[0] + ":Authenticator -- " + third[1] + ":sendSecureValue --> " + third[2] + ":Client");
                System.out.println( (i+3)+ " | " +  fourth[0] + ":Authenticator -- " + fourth[1] + ":genCPasswd --> "  + fourth[2] + ":Authenticator");
                System.out.println( (i+4)+ " | " + fifth[0] + ":Client -- " + fifth[1] + ":sendPassword --> " + fifth[2] + ":Authenticator");
                System.out.println( (i+5)+ " | " + sixth[0] + ":Authenticator -- " + sixth[1] + ":checkVerify --> " + sixth[2] + ":Authenticator");
                 System.out.println("\n===============================================================================================");



                i += 7; // Passer directement au bloc suivant
            } else {
              if (format2 && condition) {
                tacticCount++;


                 System.out.println("\n===============================================================================================");
                 System.out.println("                              Tactic detected at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                System.out.println( i+ " | " + first[0] + ":Client -- " + first[1] + ":requestAuthen --> " + first[2] + ":Authenticator");
                System.out.println( (i+1)+ " | " + second[0] + ":Authenticator -- " + second[1] + ":genSecureValue --> " + second[2] + ":Authenticator");
                System.out.println( (i+2)+ " | " + third[0] + ":Authenticator -- " + third[1] + ":sendSecureValue --> " + third[2] + ":Client");
                System.out.println( (i+3)+ " | " +fourth[0] + ":Client -- " + fourth[1] + ":genPasswd --> " + fourth[2] + ":Client");
                System.out.println( (i+4)+ " | " + fifth[0] + ":Client -- " + fifth[1] + ":sendPassword --> " + fifth[2] + ":Authenticator");
                System.out.println( (i+5)+ " | " + sixth[0] + ":Authenticator -- " + sixth[1] + ":checkVerify --> " + sixth[2] + ":Authenticator");
                 System.out.println("\n===============================================================================================");


 System.out.println((i+1) + " | " + second[0] + ":ReferenceMonitor -- " + second[1] + " --> " + second[2] + ":ReferenceMonitor");

               i += 7; // Passer directement au bloc suivant
               } else {
                System.out.println("\nX ERROR! Unexpected CALLER Or CALLEE at line " + i);
                System.out.println("-----------------------------------------------------------------------------------------------");
                i++; // Vérifier la structure en avançant ligne par ligne
            }
          }
        }
    }

// Définition de la grammaire
  static final public void Trace() throws ParseException {
    System.out.println("\n Analyzing trace...");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Event();
    }
  }

  static final public void Event() throws ParseException {
  Token caller; Token method; Token callee;
    jj_consume_token(CALLER);
    caller = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    method = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    callee = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
        events.add(new String[]{caller.image, method.image, callee.image});
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public OneTimePasswordParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,};
   }

  /** Constructor with InputStream. */
  public OneTimePasswordParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public OneTimePasswordParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new OneTimePasswordParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public OneTimePasswordParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new OneTimePasswordParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public OneTimePasswordParser(OneTimePasswordParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(OneTimePasswordParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[11];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 11; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
